products/zomlang/tests/language/expressions/literals/legacy-octal.zom
// RUN: %zomc compile --dump-ast %s 2>&1 | %FileCheck %s

// Test legacy octal literals which are not allowed
let x = 0123;

// CHECK: error: Octal literals are not allowed. Use the syntax '0o123'
// CHECK-NEXT: let x = 0123;
// CHECK-NEXT:         ^~~~

// Verify that the value is still parsed correctly as octal (83) despite the error
// CHECK: "value": 83
